<resources>
    <string name="app_name">Took</string>
    <string name="login_by_password">密码登录</string>
    <string name="login_by_verifycode">验证码登录</string>
    <string name="phone_number">手机号码：</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="login_password">登录密码：</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="remember_record">自动登录</string>
    <string name="login">登&#160;&#160;&#160;录</string>
    <string name="input_new_password">输入新密码：</string>
    <string name="input_new_password_hint">请输入新密码</string>
    <string name="confirm_new_password">确认新密码：</string>
    <string name="input_new_password_again">请再次输入验证码</string>
    <string name="verifycode">&#160;&#160;验证码 ：</string>
    <string name="verifycode2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;验证码 ：</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="done">登&#160;&#160;&#160;录</string>
    <string name="phone_admin">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;户：</string>
    <string name="phone_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="no_account">还没有账号？</string>
    <string name="register_number">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="new_password">确认密码：</string>
    <string name="enter_new_password">请确认输入的密码</string>
    <string name="new_register">注&#160;&#160;&#160;册</string>
    <string name="hello">你好，世界</string>
    <string name="title_activity_text_size">TextSizeActivity</string>
    <string name="simple_calculator">简单计算器</string>
    <string name="cancel">CE</string>
    <string name="remove">÷</string>
    <string name="ride">×</string>
    <string name="C">C</string>
    <string name="seven">7</string>
    <string name="aity">8</string>
    <string name="line">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtract">-</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="passive">1/x</string>
    <string name="zero">0</string>
    <string name="lot">.</string>
    <string name="be">=</string>
    <string name="add">+</string>
    <string name="back">返 回</string>
    <string name="calculator">鸽鸽的计算器</string>
    <string name="time">鸽鸽的时间选择器</string>


</resources>