<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="-40dp"
            android:background="@drawable/title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_layout_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/phone_admin"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/editext_selector"
                android:hint="请输入用户名或者手机号"
                android:inputType="text"
                android:maxLength="18"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/common_font_size" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_layout_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/phone_password"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/editext_selector"
                android:hint="@string/input_password"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/common_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ck_remember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/remember_password"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />

            <CheckBox
                android:id="@+id/ck_automatic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/remember_record"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />

        <Button
            android:id="@+id/btn_jump"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/no_account"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />
    </LinearLayout>


</LinearLayout>